Update: Resources updated

--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -36,9 +36,11 @@ profile.btn.updateInfo = Update info
 admin.onlineUserList = Online users list
 admin.usersList = Users list
 admin.addProduct = Add product
+admin.addProductCategory = Add product category
 admin.orders = Orders
 admin.btn.banUser = Ban user
 admin.btn.unbanUser = Unban user
+product.btn.addProduct.category = Add category
 
 pagination.prev = Previous
 pagination.current = Current
