Update: localization updated

--- a/src/main/resources/exceptionMessages_en.properties
+++ b/src/main/resources/exceptionMessages_en.properties
@@ -1,4 +1,3 @@
-validation.user.registration.login = Invalid login, you can use english language characters, digits, dash, underscore. Min length is 3, max is 25
 validation.user.registration.phone = Invalid phone, set password by pattern: +375292020327 or 375292020327
 validation.user.registration.password = Invalid password, you can use english language characters, digits, dash, underscore. Min length is 8, max is 16
 validation.user.registration.email = Invalid email
@@ -7,12 +6,23 @@ validation.user.login.incorrect = Invalid login or password
 validation.user.login.isBanned = Your status is "banned", If you just registered please follow the sent email link otherwise contact with administration
 
 query.user.registration.emailAlreadyExist = This email is already exist
+query.user.registration.mobileAlreadyExist = This mobile is already exist
 query.user.registration.commonError = Creation user error
 
-service.commonError = Something goes wrong, we working on it.
+query.user.updating.commonError = Updating user error
 
 query.user.getUser.userNotFound = User is not found
 query.user.getUsers.usersNotFound = Users is not found
+
+query.product.addition.titleAlreadyExist = Product name is already exist
+query.product.addition.imgPathAlreadyExist = Product image path is already exist
+query.product.addition.commonError = Product addition error
+
+query.product.category.addition.nameAlreadyExist = Category name is already exist
+query.product.category.addition.imgPathAlreadyExist = Category image path is already exist
+query.product.category.addition.commonError = Category addition error
+
+service.commonError = Something goes wrong, we working on it.
 
 errorPage.title = Something goes wrong...
 errorPage.code = Error code:
