--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -8,6 +8,7 @@ header.lang = Language
 header.lang.rus = RUSSIAN
 header.lang.eng = ENGLISH
 header.userOrdersPage = My orders
+header.userBalance = Balance: 
 
 #registration
 registration.legend = Registration Form
