--- a/src/main/resources/localization_ru.properties
+++ b/src/main/resources/localization_ru.properties
@@ -8,6 +8,7 @@ header.lang = \u042F\u0437\u044B\u043A
 header.lang.rus = \u0420\u0443\u0441\u0441\u043A\u0438\u0439
 header.lang.eng = \u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
 header.userOrdersPage = \u041C\u043E\u0438 \u0437\u0430\u043A\u0430\u0437\u044B
+header.userBalance = \u0411\u0430\u043B\u0430\u043D\u0441: 
 
 #registration
 registration.legend = \u0424\u043E\u0440\u043C\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
