Update: Global update after bandess

--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -39,9 +39,11 @@ admin.usersList = Users list
 admin.addProduct = Add product
 admin.addProductCategory = Add product category
 admin.orders = Orders
+admin.addition.productCategory.image = Select category image
+admin.addition.productCategory.name = Enter category name
 admin.btn.banUser = Ban user
 admin.btn.unbanUser = Unban user
-product.btn.addProduct.category = Add category
+admin.btn.addProductCategory = Add category
 
 pagination.prev = Previous
 pagination.current = Current
