--- a/src/main/resources/exceptionMessages_en.properties
+++ b/src/main/resources/exceptionMessages_en.properties
@@ -5,6 +5,8 @@ validation.user.registration.fieldlength = Max length of firstname, lastname, ad
 validation.user.login.incorrect = Invalid login or password
 validation.user.login.isBanned = Your status is "banned", If you just registered please follow the sent email link otherwise contact with administration
 
+validation.product.category.name = Name is not valid
+
 query.user.registration.emailAlreadyExist = This email is already exist
 query.user.registration.mobileAlreadyExist = This mobile is already exist
 query.user.registration.commonError = Creation user error
