Update: Global update after bandess

--- a/src/main/resources/exceptionMessages_en.properties
+++ b/src/main/resources/exceptionMessages_en.properties
@@ -5,6 +5,11 @@ validation.user.registration.fieldlength = Max length of firstname, lastname, ad
 validation.user.login.incorrect = Invalid login or password
 validation.user.login.isBanned = Your status is "banned", If you just registered please follow the sent email link otherwise contact with administration
 
+validation.topUpBalance.cardNumber = Card number is not valid
+validation.topUpBalance.cardDate = Card date is not valid
+validation.topUpBalance.cardCVV = Card CVV is not valid
+validation.topUpBalance.money = Summ is not valid
+
 validation.product.category.name = Name is not valid
 
 query.user.registration.emailAlreadyExist = This email is already exist
