--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -45,6 +45,14 @@ admin.btn.banUser = Ban user
 admin.btn.unbanUser = Unban user
 admin.btn.addProductCategory = Add category
 
+#top up balance
+topUpBalance.legend = Top up your balance
+topUpBalance.cardNumber = Enter card number
+topUpBalance.date = Enter card date
+topUpBalance.CVV = Enter card CVV
+topUpBalance.money = Enter summ
+topUpBalance.btn =  Top up balance
+
 pagination.prev = Previous
 pagination.current = Current
 pagination.next = Next
