Update: Resources updated

--- a/src/main/resources/exceptionMessages_en.properties
+++ b/src/main/resources/exceptionMessages_en.properties
@@ -31,7 +31,7 @@ query.product.category.addition.commonError = Category addition error
 
 service.commonError = Something goes wrong, we working on it.
 
-errorPage.title = Something goes wrong...
+errorPage.title = Something goes wrong....
 errorPage.code = Error code:
 errorPage.contactUs = If this error worry you please contact us
 errorPage.toHome = Go to Home page
