--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -45,7 +45,7 @@ admin.btn.banUser = Ban user
 admin.btn.unbanUser = Unban user
 admin.btn.addProductCategory = Add category
 
-#top up balance
+#topUpBalance
 topUpBalance.legend = Top up your balance
 topUpBalance.cardNumber = Enter card number
 topUpBalance.date = Enter card date
