--- a/src/main/resources/exceptionMessages_ru.properties
+++ b/src/main/resources/exceptionMessages_ru.properties
@@ -29,7 +29,7 @@ query.product.category.addition.nameAlreadyExist = "\u041D\u0430\u0437\u0432\u04
 query.product.category.addition.imgPathAlreadyExist = "\u041F\u0443\u0442\u044C \u043A \u0438\u0437\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044E \u0437\u0430\u043D\u044F\u0442"
 query.product.category.addition.commonError = "\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0438\u0438 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438"
 
-service.commonError = \u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A, \u043C\u044B \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u043C \u043D\u0430\u0434 \u044D\u0442\u0438\u043C.
+service.commonError = \u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A, \u043C\u044B \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u043C \u043D\u0430\u0434 \u044D\u0442\u0438\u043C...
 
 errorPage.title = \u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A
 errorPage.code = \u041A\u043E\u0434 \u043E\u0448\u0438\u0431\u043A\u0438:
