Update: Resources updated

--- a/src/main/resources/exceptionMessages_en.properties
+++ b/src/main/resources/exceptionMessages_en.properties
@@ -10,6 +10,11 @@ validation.topUpBalance.cardDate = Card date is not valid
 validation.topUpBalance.cardCVV = Card CVV is not valid
 validation.topUpBalance.money = Summ is not valid
 
+validation.product.title = Title is not valid
+validation.product.description = Description is not valid
+validation.product.price = Price is not valid
+validation.product.count = Count is not valid
+
 validation.product.category.name = Name is not valid
 
 query.user.registration.emailAlreadyExist = This email is already exist
