--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -39,11 +39,21 @@ admin.usersList = Users list
 admin.addProduct = Add product
 admin.addProductCategory = Add product category
 admin.orders = Orders
+admin.addition.product.image = Select product image
+admin.addition.product.category = Select product category
+admin.addition.product.title = Enter product title
+admin.addition.product.description =  Enter product description
+admin.addition.product.price = Enter product price
+admin.addition.product.count =  Enter product count
 admin.addition.productCategory.image = Select category image
 admin.addition.productCategory.name = Enter category name
 admin.btn.banUser = Ban user
 admin.btn.unbanUser = Unban user
+admin.btn.addProduct = Add product
 admin.btn.addProductCategory = Add category
+
+#product
+product.category = Category
 
 #topUpBalance
 topUpBalance.legend = Top up your balance
