Update: Resources updated

--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -10,6 +10,9 @@ header.lang.eng = ENGLISH
 header.userOrdersPage = My orders
 header.userBalance = Balance: 
 
+#main
+product.btn.catalog = Catalog
+
 #registration
 registration.legend = Registration Form
 user.id = ID
