--- a/src/main/resources/localization_ru.properties
+++ b/src/main/resources/localization_ru.properties
@@ -10,6 +10,9 @@ header.lang.eng = \u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
 header.userOrdersPage = \u041C\u043E\u0438 \u0437\u0430\u043A\u0430\u0437\u044B
 header.userBalance = \u0411\u0430\u043B\u0430\u043D\u0441: 
 
+#main
+product.btn.catalog = \u041A\u0430\u0442\u0430\u043B\u043E\u0433
+
 #registration
 registration.legend = \u0424\u043E\u0440\u043C\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
 user.id = ID
