Update: Resources updated

--- a/src/main/resources/exceptionMessages_en.properties
+++ b/src/main/resources/exceptionMessages_en.properties
@@ -17,6 +17,8 @@ validation.product.count = Count is not valid
 
 validation.product.category.name = Name is not valid
 
+validation.pagination = Invalid page number
+
 query.user.registration.emailAlreadyExist = This email is already exist
 query.user.registration.mobileAlreadyExist = This mobile is already exist
 query.user.registration.commonError = Creation user error
@@ -33,6 +35,9 @@ query.product.addition.commonError = Product addition error
 query.product.category.addition.nameAlreadyExist = Category name is already exist
 query.product.category.addition.imgPathAlreadyExist = Category image path is already exist
 query.product.category.addition.commonError = Category addition error
+query.product.category.getCategories.categoriesNotFound = Categories is not found
+
+query.product.getProducts.productsNotFound = Products is not found
 
 service.commonError = Something goes wrong, we working on it.
 
