--- a/src/main/resources/exceptionMessages_ru.properties
+++ b/src/main/resources/exceptionMessages_ru.properties
@@ -17,6 +17,8 @@ validation.product.count = \u041A\u043E\u043B-\u0432\u043E \u0432\u0432\u0435\u0
 
 validation.product.category.name = \u0418\u043C\u044F \u0432\u0432\u0435\u0434\u0435\u043D\u043E \u043D\u0435 \u0432\u0435\u0440\u043D\u043E
 
+validation.pagination = \u041D\u0435\u0432\u0435\u0440\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+
 query.user.registration.emailAlreadyExist = \u042D\u0442\u043E\u0442 email \u0443\u0436\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D
 query.user.registration.mobileAlreadyExist = \u042D\u0442\u043E\u0442 \u043D\u043E\u043C\u0435\u0440 \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442
 query.user.registration.commonError = \u041E\u0448\u0438\u0431\u043A\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
@@ -33,6 +35,9 @@ query.product.addition.commonError = \u041F\u0440\u0438 \u0434\u043E\u0431\u0430
 query.product.category.addition.nameAlreadyExist = "\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043A\u043\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438 \u0437\u0430\u043D\u044F\u0442\u043E"
 query.product.category.addition.imgPathAlreadyExist = "\u041F\u0443\u0442\u044C \u043A \u0438\u0437\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044E \u0437\u0430\u043D\u044F\u0442"
 query.product.category.addition.commonError = "\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0438\u0438 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438"
+query.product.category.getCategories.categoriesNotFound = \u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438 \u043D\u0435 \u0431\u044B\u043B\u0438 \u043D\u0430\u0439\u0434\u0435\u043D\u044B
+
+query.product.getProducts.productsNotFound = \u0422\u043E\u0432\u0430\u0440\u044B \u043D\u0435 \u0431\u044B\u043B\u0438 \u043D\u0430\u0439\u0434\u0435\u043D\u044B
 
 service.commonError = \u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A, \u043C\u044B \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u043C \u043D\u0430\u0434 \u044D\u0442\u0438\u043C...
 
