Update: Resources updated

--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -9,6 +9,7 @@ header.lang.rus = RUSSIAN
 header.lang.eng = ENGLISH
 header.userOrdersPage = My orders
 header.userBalance = Balance: 
+header.userCartPage = Cart
 
 #main
 product.btn.catalog = Catalog
@@ -57,6 +58,9 @@ admin.btn.addProductCategory = Add category
 
 #product
 product.category = Category
+product.addToCart = Add to cart
+product.editProduct = Edit product
+product.writeReview = Write review
 
 #topUpBalance
 topUpBalance.legend = Top up your balance
@@ -65,6 +69,17 @@ topUpBalance.date = Enter card date
 topUpBalance.CVV = Enter card CVV
 topUpBalance.money = Enter summ
 topUpBalance.btn =  Top up balance
+
+#review
+review.legend = Review
+review.write = Save review
+review.context = Enter review
+
+#error page
+errorPage.title = Something goes wrong...
+errorPage.code = Error code:
+errorPage.contactUs = If this error worry you please contact us
+errorPage.toHome = Go to Home page
 
 pagination.prev = Previous
 pagination.current = Current
