Update: Resources updated

--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -75,6 +75,15 @@ review.legend = Review
 review.write = Save review
 review.context = Enter review
 
+#cart
+cart.img = Image
+cart.title = Title
+cart.count = Count
+cart.price = Price
+cart.addItem = Add product
+cart.removeItem = Remove product
+cart.constructOrder = Construct order
+
 #error page
 errorPage.title = Something goes wrong...
 errorPage.code = Error code:
