Update: Resources updated

--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -84,6 +84,19 @@ cart.addItem = Add product
 cart.removeItem = Remove product
 cart.constructOrder = Construct order
 
+#orders
+order.id = Order ID
+order.createdAt = Created at
+order.updatedAt = Updated at
+order.items = Products
+order.totalPrice = Total price
+order.accepted = Confirmed
+order.confirmed = Confirm
+order.decline = Decline
+order.confirm = Confirm
+orders.productTitle = Title: 
+orders.productCount = Count:
+
 #error page
 errorPage.title = Something goes wrong...
 errorPage.code = Error code:
