--- a/src/main/resources/localization_ru.properties
+++ b/src/main/resources/localization_ru.properties
@@ -83,6 +83,19 @@ cart.addItem = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0442\u043E\u04
 cart.removeItem = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0442\u043E\u0432\u0430\u0440
 cart.constructOrder = \u0421\u0444\u043E\u0440\u043C\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0437\u0430\u043A\u0430\u0437
 
+#orders
+order.id = \u0417\u0430\u043A\u0430\u0437 ID
+order.createdAt = \u0421\u043E\u0437\u0434\u0430\u043D
+order.updatedAt = \u041E\u0431\u043D\u043E\u0432\u043B\u0435\u043D
+order.items = \u0422\u043E\u0432\u0430\u0440\u044B
+order.totalPrice = \u041E\u0431\u0449\u0430\u044F \u0441\u0443\u043C\u043C\u0430
+order.accepted = \u0421\u0442\u0430\u0442\u0443\u0441
+order.confirmed = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u0435
+order.decline = \u041E\u0442\u043A\u043B\u043E\u043D\u0438\u0442\u044C
+order.confirm = \u041F\u0440\u0438\u043D\u044F\u0442\u044C
+orders.productTitle = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435: 
+orders.productCount = \u041A\u043E\u043B\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E:
+
 #error page
 errorPage.title = \u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A...
 errorPage.code = \u041A\u043E\u0434 \u043E\u0448\u0438\u0431\u043A\u0438:
