Update: Resources updated

--- a/src/main/resources/exceptionMessages_en.properties
+++ b/src/main/resources/exceptionMessages_en.properties
@@ -39,6 +39,8 @@ query.product.category.getCategories.categoriesNotFound = Categories is not foun
 
 query.product.getProducts.productsNotFound = Products is not found
 
+query.orders.addOrder.commonError = Order constructing error
+
 service.commonError = Something goes wrong, we working on it.
 
 errorPage.title = Something goes wrong....
