--- a/src/main/resources/localization_en.properties
+++ b/src/main/resources/localization_en.properties
@@ -55,6 +55,8 @@ admin.btn.banUser = Ban user
 admin.btn.unbanUser = Unban user
 admin.btn.addProduct = Add product
 admin.btn.addProductCategory = Add category
+admin.editProduct = Edit product
+admin.btn.editProduct = Edit product
 
 #product
 product.category = Category
